--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -19,6 +19,159 @@
       </div>
     </ion-item>
   </ion-list>
+
+  <div class="scroll-content" style="margin-top: 56px;">
+
+    <ion-grid class="is-grid grid">
+  
+      <ion-row class="row">
+  
+        <ion-col class="is-tile is-tile-bordered col" col-4="" text-center="">
+  
+          <div>
+  
+            <img src="assets/imgs/gmail.png">
+  
+            <p class="is-tile-caption">
+  
+              Gmail
+  
+            </p>
+  
+          </div>
+  
+        </ion-col>
+  
+        <ion-col class="is-tile is-tile-bordered col" col-4="" text-center="">
+  
+          <div>
+  
+            <img src="assets/imgs/yahoo.png">
+  
+            <p class="is-tile-caption">
+  
+              Yahoo
+  
+            </p>
+  
+          </div>
+  
+        </ion-col>
+  
+        <ion-col class="is-tile is-tile-bordered col" col-4="" text-center="">
+  
+          <div>
+  
+            <img src="assets/imgs/mail-ru.png">
+  
+            <p class="is-tile-caption">
+  
+              Mail.ru
+  
+            </p>
+  
+          </div>
+  
+        </ion-col>
+  
+      </ion-row>
+  
+  
+  
+      <ion-row class="row">
+  
+        <ion-col class="is-tile is-tile-bordered col" col-4="" text-center="">
+  
+          <div>
+  
+            <img src="assets/imgs/yandex.png">
+  
+            <p class="is-tile-caption">
+  
+              Yandex
+  
+            </p>
+  
+          </div>
+  
+        </ion-col>
+  
+        <ion-col class="is-tile is-tile-bordered col" col-4="" text-center="">
+  
+          <div>
+  
+            <img src="assets/imgs/mail.png">
+  
+            <p class="is-tile-caption">
+  
+              IMAP
+  
+            </p>
+  
+          </div>
+  
+        </ion-col>
+  
+        <ion-col class="is-tile is-tile-bordered col" col-4="" text-center="">
+  
+          <div>
+  
+            <img src="assets/imgs/outlook.png">
+  
+            <p class="is-tile-caption">
+  
+              Outlook
+  
+            </p>
+  
+          </div>
+  
+        </ion-col>
+  
+      </ion-row>
+  
+  
+  
+      <ion-row class="row">
+  
+        <ion-col class="is-tile is-tile-bordered col" col-4="" text-center="">
+  
+          <div>
+  
+            <img src="assets/imgs/aol.png">
+  
+            <p class="is-tile-caption">
+  
+              Aol Mail
+  
+            </p>
+  
+          </div>
+  
+        </ion-col>
+  
+        <ion-col class="is-tile is-tile-bordered col" col-4="" text-center="">
+  
+          <div>
+  
+            <img src="assets/imgs/icloud.png">
+  
+            <p class="is-tile-caption">
+  
+              iCloud Mail
+  
+            </p>
+  
+          </div>
+  
+        </ion-col>
+  
+      </ion-row>
+  
+    </ion-grid>
+  
+  </div>
+
   <!--
     <div *ngIf="selectedItem" padding>
       You navigated here from <b>{{selectedItem.title }}</b>
