--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -41,13 +41,13 @@
         <ion-label>Theme Your App</ion-label>
       </ion-item>
     </ion-list> -->
-    <ion-list lines="none">
+    <ion-list>
       <ion-list-header>
         <ion-label>Categorías</ion-label>
       </ion-list-header>
       <ion-item *ngFor="let item of items">
         <ion-icon [name]="item.icon" slot="start"></ion-icon>
-        <ion-label>{{item.title}}</ion-label>
+        <ion-label (click)="filterApps(item.id)">{{item.title}}</ion-label>
       </ion-item>
     </ion-list>
 </ion-content>
