Filtrado de aplicaciones por categoría, y almacenamiento de resultado en el estado del componente

--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      List
+      Listado de Aplicaciones
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -20,9 +20,9 @@
     </ion-item>
   </ion-list> -->
 
-  <div class="scroll-content" style="/*margin-top: 56px;*/">
+  <div class="scroll-content">
 
-    <ion-grid class="is-grid grid">
+    <ion-grid class="is-grid grid" *ngIf="applications">
   
       <ion-row class="row">
   
