--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Categorias de Aplicaciones
+      Categorías de Aplicaciones
     </ion-title>
   </ion-toolbar>
 </ion-header>
